# SI_Docker_proyectofinal

./: README.md
gestion-incidencias-rpi/: docker-compose.yml
gestion-incidencias-rpi/backend/: Dockerfile  requirements.txt
gestion-incidencias-rpi/backend/empresa-django-api/: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml
gestion-incidencias-rpi/backend/empresa-django-api/appEmpresaDjango/: admin.py  models.py  permissions.py
gestion-incidencias-rpi/backend/empresa-django-api/empresaDjango_api/: settings.py  wsgi.py
gestion-incidencias-rpi/frontend/: Dockerfile
gestion-incidencias-rpi/frontend/empresa-django-vue/: Dockerfile  Makefile  README.md  docker-compose.yml  env-example
gestion-incidencias-rpi/frontend/empresa-django-vue/app/: index.html  package.json  (+2 more)
proyecto_rpi_dam/: docker-compose.yml
proyecto_rpi_dam/backend/: SGE_Django.postman_collection.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt
proyecto_rpi_dam/backend/appEmpresaDjango/: admin.py  apps.py  serializers.py  urls.py  views.py
proyecto_rpi_dam/backend/appEmpresaDjango/migrations/: 0001_initial.py  0003_rename_habilidad_empleado_habilidades.py  0004_empleado_imagen_alter_empleado_habilidades.py
proyecto_rpi_dam/backend/empresaDjango_api/: asgi.py  settings.py  urls.py
proyecto_rpi_dam/backend/empresaDjango_api/templates/: index.html  layout.html
proyecto_rpi_dam/docker/backend/: Dockerfile
proyecto_rpi_dam/docker/frontend/: Dockerfile
proyecto_rpi_dam/frontend/: index.html  package.json  vite.config.js
proyecto_rpi_dam/frontend/src/: App.vue
(+23 files in other folders)
